# messenger

./: docker-compose.yml
client/: package-lock.json
client-tui/: pyproject.toml
client-tui/client_tui/: api_requests.py  client.py  main.py  models.py
database/: Cargo.toml
database/postgres/: Dockerfile
database/src/: lib.rs  pg_conn.rs  schema.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/endpoints/: chats.rs  mod.rs  users.rs
server/src/models/: chat.rs  user.rs
session/: Cargo.toml
session/src/: lib.rs
