[tool.poetry]
name = "client-tui"
version = "0.1.0"
description = ""
authors = ["Ja-sonYun <killa30867@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
requests = "^2.31.0"
rich = "^13.7.0"
pydantic = "^2.5.3"
sseclient-py = "^1.8.0"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
pysen = "^0.10"
mypy = "^1.0"
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"
# wemake-python-styleguide = "^0.17.0"

[tool.pysen]
version = "0.10"
builder = ".lint.py"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py311"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

[tool.pysen.lint.source]
# includes = ["."]
excludes = [".venv"]
