[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-web-lab = "0.20.1"
any = "0.0.1"
anyhow = "1.0.79"
chrono = "0.4.31"
database = { version = "0.1.0", path = "../database" }
session = { version = "0.1.0", path = "../session" }
diesel = { version = "2.1.4", features = ["postgres"] }
env_logger = "0.11.0"
futures-util = "0.3.30"
log = "0.4.20"
parking_lot = "0.12.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = "1.35.1"
tokio-stream = "0.1.14"
